# symaira-eraseme

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  TROUBLESHOOTING.md  pyproject.toml  release-notes.md
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: broker.yml  bug.yml  config.yml  feature.yml
.github/audit/: 2026-05-20T08-05-00Z.md  2026-05-21T09-08-32Z.md
.github/branch-protection/: main.json
.github/coverage/: 2026-06-29T18:40:18Z.md  2026-07-01T12:20:58Z.md
.github/prerelease/: 2026-06-29T17:32:57Z.md  2026-06-30T07:50:03Z.md  2026-07-01T12:15:00Z.md
.github/review/: 2026-05-19T17-42-30Z.md  2026-05-19T21-39-04Z.md  2026-05-22T10-09-55Z.md  2026-05-22T13-15-00Z.md  2026-05-27T12-32-04Z.md  2026-05-27T14-04-31Z.md  2026-06-02T09-45-13Z.md  2026-06-02T12-52-10Z.md  2026-06-02T14-06-00Z.md  2026-06-03T22-00-00Z.md  2026-06-04T00-00-00Z.md  2026-06-04T08-30-00Z.md  2026-06-10T14-17-32Z.md  2026-06-10T17-19-04Z.md  2026-06-11T07-43-14Z.md  2026-06-15T18-54-50Z.md  2026-06-16T10-00-47Z.md  2026-06-16T12-00-00Z.md  2026-06-16T16-06-41Z.md  2026-06-16T19-30-00Z.md
.github/workflows/: ci.yml  publish-redirect.yml  publish.yml  registry-link-check.yml  registry-scanner.yml  release-app.yml
.omo/run-continuation/: ses_12e1cc210ffeuPzcccNThid4f9.json  ses_12f1fb43effeRzJOCra5jDlVNf.json
app/SymairaDashboard/: Package.swift  README.md  build.sh
app/SymairaEraseMe/: Package.resolved  Package.swift  README.md  build.sh
docs/: architektur-plan-v0.1.md
examples/aider/: CONVENTIONS.md  README.md
examples/claude-code/: README.md
examples/cline/: README.md
examples/cline/.clinerules/: 00-symaira-eraseme.md
examples/codex/: README.md
examples/continue/: README.md
examples/cursor/: README.md
examples/hermes/: README.md
examples/openclaw/: README.md
examples/plain-cron/: README.md
examples/windsurf/: README.md
redirect/openeraseme/: pyproject.toml
redirect/openeraseme/src/openeraseme/: __init__.py
registry/brokers/eu/: _example.yaml  across-eu.yaml  actioniq-eu.yaml  acxiom-eu.yaml  acxiom.yaml  adform-eu.yaml  adikteev-eu.yaml  admetrics-eu.yaml  adobe-audience-manager-eu.yaml  adroll-eu.yaml  adspirit-eu.yaml  adsquare-eu.yaml  adventori-eu.yaml  amazon-ads-eu.yaml  arvato-financial-solutions--bertelsmann-eu.yaml  azerion--improve-digital-eu.yaml  azerion--sublime-eu.yaml  bidtheatre-ab-eu.yaml  blis-global-eu.yaml  blueconic-eu.yaml  bonded-eu.yaml  buergel-wirtschaftsinformationen-gmbh--co-kg-eu.yaml  captify-technologies-eu.yaml  cognism-eu.yaml  com-solutions-eu.yaml  commanders-act-eu.yaml  contentsquare-eu.yaml  criteo-eu.yaml  das-telefonbuch-eu.yaml  data-bubble-eu.yaml  data-hq-eu.yaml  datajoy-eu.yaml  datarade-eu.yaml  dealfront-eu.yaml  dentsu-uk-eu.yaml  deutsche-post-adress-gmbh--co-kg-eu.yaml  digiseg-eu.yaml  doubleverify-eu.yaml  emetriq-eu.yaml  (+76 more)
registry/laws/: ccpa-deletion.en.md.j2  ccpa-opt-out.en.md.j2  ccpa-rebuttal-deletion.md.j2  gdpr-art17.de.md.j2  gdpr-art17.en.md.j2  gdpr-rebuttal-address.md.j2  gdpr-rebuttal-identity.md.j2  gdpr-rebuttal-rejected.en.md.j2  gdpr-rebuttal-verification.en.md.j2
registry/schemas/: broker.schema.json
registry/templates/: dashboard.html.j2  report.html.j2
scripts/: check_mcp_schema_sync.py  check_render_error_terminal.py  fix-macos27.sh  package-dmg.sh  registry_sync.py  setup-agents.sh
skills/: SKILL.md  daily-tick.md  handle-action-required.md  plan-removal-campaign.md  re-scan-quarterly.md  send-removal-batch.md  setup-identity.md  triage-agent-setup.md  triage-broker-replies.md  workflow-removal-cycle.md
skills/contribute-broker/: SKILL.md
src/openeraseme/: __init__.py  cli.py
src/symeraseme/: __init__.py  interactive.py  mcp_server.py
tests/fixtures/: invalid_broker.yaml
tests/integration/: test_critical_path.py
tests/smoke/: conftest.py  test_action_skill.py  test_broker_validation.py  test_cli_commands.py  test_plan_skill.py  test_send_skill.py  test_setup_skill.py  test_tick_skill.py  test_triage_skill.py  test_web_form_and_inbox.py
tests/unit/: test_agent_client.py  test_anthropic_adapter.py  test_captcha_service.py  test_captcha_solver.py  test_classifier.py  test_cli.py  test_cli_args.py  test_cli_result_envelope.py  test_config.py  test_confirmation_clicker.py  test_consent.py  test_consent_security.py  test_dashboard.py  test_dashboard_service.py  test_db_encryption.py  test_deadlines.py  test_doctor_redaction.py  test_event_store.py  test_events_facade.py  test_himalaya.py  test_identity.py  test_imap.py  test_inbox_service.py  test_interactive.py  test_llm_factory.py  test_llm_protocol.py  test_manual_fallback.py  test_mcp_server.py  test_mcp_server_handler.py  test_notify.py  test_oauth2.py  test_ollama_client.py  test_openai_client.py  test_openai_compatible_client.py  test_orchestrator.py  test_orchestrator_compat.py  test_reply_manager.py  test_reply_service.py  test_reporting_service.py  test_reports.py  (+14 more)
(+824 files in other folders)
