[project]
name = "symeraseme"
version = "0.9.0"
description = "Automated data broker removal tool — close your accounts, erase your data."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Daniel Justus", email = "daniel@ohmyopen.com" }]
readme = "README.md"

keywords = ["privacy", "gdpr", "ccpa", "data-broker", "opt-out"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "keyring>=24.0.0",
    "cryptography>=42.0.0",
    "jinja2>=3.1.0",
    "jsonschema>=4.20.0",
    "structlog>=24.0.0",
    "email-validator>=2.1.0",
    "aiosmtplib>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
    "keyrings.alt>=5.0.0",
]
web = [
    "playwright>=1.44.0",
]
triage = [
    "anthropic>=0.34.0",
]
openai = [
    "openai>=1.30.0",
]
ollama = [
]

[project.scripts]
symeraseme = "symeraseme.cli:app"

[project.urls]
Homepage = "https://github.com/danieljustus/symaira-eraseme"
Repository = "https://github.com/danieljustus/symaira-eraseme"
Issues = "https://github.com/danieljustus/symaira-eraseme/issues"
Changelog = "https://github.com/danieljustus/symaira-eraseme/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/symeraseme"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".git", "__pycache__", ".venv", "dist", "build"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
exclude = ["tests/", ".venv/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
