[project]
name = "openeraseme"
version = "0.1.4"
description = "Deprecated: use 'symeraseme' instead. Automated data broker removal tool."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Daniel Justus", email = "daniel@ohmyopen.com" }]
readme = "README.md"

dependencies = [
    "symeraseme>=0.1.2",
]

[project.scripts]
openeraseme = "openeraseme.cli:app"

[project.urls]
Homepage = "https://github.com/danieljustus/symaira-eraseme"
Repository = "https://github.com/danieljustus/symaira-eraseme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openeraseme"]
